--- a/scss/components/content/_title-container.scss
+++ b/scss/components/content/_title-container.scss
@@ -106,7 +106,7 @@
 
   .shop-cta {
     position: absolute;
-    background: $color-neutral-6;
+    background: rgba($color-neutral-6,.8);
     bottom: 0;
     left: 0;
     width: 100%;
