--- a/scss/components/woocommerce/_cart.scss
+++ b/scss/components/woocommerce/_cart.scss
@@ -9,7 +9,7 @@
   .woocommerce-info,
   .woocommerce-message {
     display: none;
-    
+
     border-top: 0;
     background: $color-neutral-brightest;
     box-shadow: 0px 2px 3px rgba($color-main,.125);
@@ -224,6 +224,16 @@
 
         td {
           text-align: right;
+        }
+      }
+
+      table {
+        small {
+          display: block;
+          font-size: 14px;
+          text-transform: uppercase;
+          letter-spacing: .125em;
+          line-height: normal;
         }
       }
 
