--- a/scss/components/woocommerce/_button.scss
+++ b/scss/components/woocommerce/_button.scss
@@ -63,6 +63,12 @@
           }
         }
       }
+
+      &.wc-backward {
+        &::before {
+          display: none;
+        }
+      }
     }
 
     &.added_to_cart {
