--- a/scss/components/woocommerce/_cart.scss
+++ b/scss/components/woocommerce/_cart.scss
@@ -1,9 +1,19 @@
 .woocommerce-cart {
   main {
+    min-height: 60vh;
+
     & > .content-wrap {
       padding-top: 2em;
       padding-bottom: 2em;
     }
+  }
+
+  h2 {
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: .125em;
+    margin-top: 1.5em;
   }
 
   .woocommerce-info,
@@ -49,7 +59,7 @@
     background: $color-neutral-brightest;
     box-shadow: 0px 2px 3px rgba($color-main,.15);
     border: 0;
-    margin-top: 2.9em;
+    margin-top: 4.9em;
 
     @media screen and (max-width: $breakpoint-medium-large) {
       margin-top: 2.5em;
