--- a/scss/components/content/_assortment-container.scss
+++ b/scss/components/content/_assortment-container.scss
@@ -84,6 +84,19 @@
       height: 100%;
       position: relative;
 
+      &::after {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        content: '';
+        display: block;
+        background: rgba(0,0,0,.25);
+        opacity: 0;
+        transition: $transition;
+      }
+
       @media screen and (max-width: $breakpoint-medium) {
         min-height: 233px;
         margin-right: 0;
@@ -101,6 +114,7 @@
       position: absolute;
       bottom: 0;
       text-align: left;
+      z-index: 2;
       color: $color-background;
       line-height: normal;
       font-size: 18px;
@@ -144,6 +158,7 @@
       top: 50%;
       transform: translate(-50%,-50%);
       transition: $transition;
+      z-index: 1;
 
       @media screen and (max-width: $breakpoint-small) {
         display: none;
@@ -196,6 +211,10 @@
       }
 
       figure {
+        &::after {
+          opacity: 1;
+        }
+
         img {
           bottom: 45px;
         }
