--- a/style.css
+++ b/style.css
@@ -1246,7 +1246,7 @@ button {
         right: 0;
         content: '';
         display: block;
-        background: rgba(0, 0, 0, 0.25);
+        background: rgba(0, 0, 0, 0.5);
         opacity: 0;
         transition: all 0.3s ease; }
       @media screen and (max-width: 768px) {
@@ -1342,7 +1342,9 @@ button {
       .assortment-container .column:hover figure::after {
         opacity: 1; }
       .assortment-container .column:hover figure img {
-        bottom: 45px; }
+        -webkit-transform: translate(-50%, calc(-50% - 10px));
+        -ms-transform: translate(-50%, calc(-50% - 10px));
+        transform: translate(-50%, calc(-50% - 10px)); }
 
 .featured-products-container {
   padding: 173px 0 53px;
