--- a/style.css
+++ b/style.css
@@ -2565,13 +2565,15 @@ h1 {
   margin-top: 1.5em; }
 
 .woocommerce-cart .woocommerce-info,
-.woocommerce-cart .woocommerce-message {
+.woocommerce-cart .woocommerce-message,
+.woocommerce-cart .free-shipping {
   display: none;
   border-top: 0;
   background: #fff;
   box-shadow: 0px 2px 3px rgba(32, 32, 32, 0.125); }
   .woocommerce-cart .woocommerce-info::before,
-  .woocommerce-cart .woocommerce-message::before {
+  .woocommerce-cart .woocommerce-message::before,
+  .woocommerce-cart .free-shipping::before {
     content: '\f00c';
     font-family: 'FontAwesome';
     color: #a82e37; }
@@ -2580,6 +2582,25 @@ h1 {
   display: none; }
   .woocommerce-cart .woocommerce-message::before {
     content: '\f00d'; }
+
+.woocommerce-cart .free-shipping,
+.woocommerce-cart .free-shipping-available {
+  display: block;
+  background: #a82e37;
+  color: #efeeed;
+  margin-bottom: 0; }
+  .woocommerce-cart .free-shipping::before,
+  .woocommerce-cart .free-shipping-available::before {
+    color: #efeeed;
+    content: '\f06a'; }
+  .woocommerce-cart .free-shipping .amount,
+  .woocommerce-cart .free-shipping-available .amount {
+    border-bottom: 1px dotted rgba(239, 238, 237, 0.5); }
+
+.woocommerce-cart .free-shipping-available {
+  background: #0c990c; }
+  .woocommerce-cart .free-shipping-available::before {
+    content: '\f058'; }
 
 .woocommerce-cart .woocommerce-cart-form {
   width: 65%;
