re-added images in the assortment container on mobile

--- a/scss/components/content/_assortment-container.scss
+++ b/scss/components/content/_assortment-container.scss
@@ -161,7 +161,8 @@
       z-index: 1;
 
       @media screen and (max-width: $breakpoint-small) {
-        display: none;
+        left: auto;
+        right: -10%;
       }
     }
 
