re-added product images inside featured-products-container

--- a/scss/components/content/_featured-products-container.scss
+++ b/scss/components/content/_featured-products-container.scss
@@ -292,7 +292,9 @@
     transform: translateY(-50%);
 
     @media screen and (max-width: $breakpoint-medium-large) {
-      display: none;
+      display: block;
+      right: 0.125em;
+      max-height: 250px;
     }
   }
 }
