--- a/scss/components/woocommerce/_single-product.scss
+++ b/scss/components/woocommerce/_single-product.scss
@@ -26,7 +26,7 @@
 
     a {
       @media screen and (max-width: $breakpoint-small) {
-        float: none;
+        float: none !important;
         margin: 0.3em 0 1em;
         text-align: right;
       }
